// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StreeringWheel components basic render 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": 334,
      "width": 334,
    }
  }
>
  <PanGestureHandler
    onGestureEvent={[Function]}
    onHandlerStateChange={[Function]}
    simultaneousHandlers={
      Object {
        "current": null,
      }
    }
  >
    <AnimatedComponent
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 334,
            "width": 334,
          }
        }
      />
    </AnimatedComponent>
  </PanGestureHandler>
</View>
`;

exports[`StreeringWheel components content render 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": 334,
      "width": 334,
    }
  }
>
  <PanGestureHandler
    onGestureEvent={[Function]}
    onHandlerStateChange={[Function]}
    simultaneousHandlers={
      Object {
        "current": null,
      }
    }
  >
    <AnimatedComponent
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "red",
            "borderWidth": 1,
            "height": 167,
            "width": 167,
          }
        }
      />
    </AnimatedComponent>
  </PanGestureHandler>
</View>
`;

exports[`StreeringWheel components render with defaultValue 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": 334,
      "width": 334,
    }
  }
>
  <PanGestureHandler
    onGestureEvent={[Function]}
    onHandlerStateChange={[Function]}
    simultaneousHandlers={
      Object {
        "current": null,
      }
    }
  >
    <AnimatedComponent
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 334,
            "width": 334,
          }
        }
      />
    </AnimatedComponent>
  </PanGestureHandler>
</View>
`;

exports[`StreeringWheel components render with value 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "height": 334,
      "width": 334,
    }
  }
>
  <PanGestureHandler
    onGestureEvent={[Function]}
    onHandlerStateChange={[Function]}
    simultaneousHandlers={
      Object {
        "current": null,
      }
    }
  >
    <AnimatedComponent
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        }
      }
    >
      <View
        style={
          Object {
            "borderColor": "red",
            "borderWidth": 1,
            "height": 167,
            "width": 167,
          }
        }
      />
    </AnimatedComponent>
  </PanGestureHandler>
</View>
`;
